[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goose = "0.17"
tokio = "1.34"
kbs-types = { git = "https://github.com/virtee/kbs-types", rev = "c90df0e" }
serde_json = "1.0"
anyhow = "1.0.75"
